fix(components): rectify broken styles (#910)
* fix(components): rectify broken styles

--- a/components/PostsGrid/PostCard.module.css
+++ b/components/PostsGrid/PostCard.module.css
@@ -1,4 +1,5 @@
-h2.title {
+/* Overrides heading styles */
+.title.title.title {
   @apply my-3;
 }
 
@@ -6,6 +7,8 @@ h2.title {
   @apply mt-3;
 }
 
-.button {
-  @apply button-primary float-right m-0 h-14 w-14 rounded-full text-2xl;
+/* Overrides button styles */
+.button.button {
+  @apply float-right m-0 h-14 w-14 rounded-full border-primary;
+  @apply bg-primary text-2xl text-light hover:bg-secondary hover:text-light;
 }
